# odroid-image

./: Makefile  README.md  boot.in  merge-overlay  mkoverlay  pyproject.toml  setup-sd
boot/: README.md
odroidimage/: creator.py  merge-overlay.py  merger.py  mkoverlay.py  overlay.py
odroidimage/cli/: mergeoverlay.py  mkoverlay.py
