[tool.poetry]
name = "odroidimage"
version = "0.1.0"
description = "Tools for building ODROID images"
authors = ["Student Robotics <kit-brain@studentrobotics.org>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
